# Tec_prog

MentalBreakdown169/: CMakeLists.txt  Carro.c  Carro.h  Geral.c  Geral.h  Piloto.c  Piloto.h  main.c
ProjetoFinal_2/src/: Aluno.java  Main.java
Projeto_Final_1/: Projeto_Final_1.cbp  Projeto_Final_1.depend  Projeto_Final_1.layout  autor.c  autor.h  geral.c  geral.h  livro.c  livro.h  main.c  menu.c  menu.h  opcoes_autor.c  opcoes_autor.h  opcoes_livro.c  opcoes_livro.h
killmepls/: CMakeLists.txt  autor.c  autor.h  geral.c  geral.h  livro.c  livro.h  main.c  menu.c  menu.h  opcoes_autor.c  opcoes_autor.h  opcoes_livro.c  opcoes_livro.h
